--- a/notebook/example.ipynb
+++ b/notebook/example.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,15 +520,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir(\"c:\\\\Users\\\\Ankith\\\\machine_learning_project\\\\\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -933,6 +924,115 @@
    ],
    "source": [
     "config.config_info[DATA_INGESTION_CONFIG_KEY][DATA_INGESTION_DOWNLOAD_URL_KEY]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'training_pipeline_config': {'pipeline_name': 'housing',\n",
+       "  'artifact_dir': 'artifact'},\n",
+       " 'data_ingestion_config': {'dataset_download_url': 'https://raw.githubusercontent.com/ageron/handson-ml/master/datasets/housing/housing.tgz',\n",
+       "  'raw_data_dir': 'raw_data',\n",
+       "  'tgz_download_dir': 'tgz_data',\n",
+       "  'ingested_dir': 'ingested_data',\n",
+       "  'ingested_train_dir': 'train',\n",
+       "  'ingested_test_dir': 'test'},\n",
+       " 'data_validation_config': {'schema_file_name': 'schema.yaml'},\n",
+       " 'data_transformation_config': {'add_bedroom_per_room': True,\n",
+       "  'transformed_dir': 'transformed_data',\n",
+       "  'transformed_train_dir': 'train',\n",
+       "  'transformed_test_dir': 'test',\n",
+       "  'preprocessing_dir': 'preprocessed',\n",
+       "  'preprocessed_object_file_name': 'preprocessed.pkl'},\n",
+       " 'model_trainer_config': {'trained_model_dir': 'trained_model',\n",
+       "  'model_file_name': 'model.pkl',\n",
+       "  'base_accuracy': 0.6},\n",
+       " 'model_evaluation_config': {'model_evaluation_file_name': 'model_evaluation.yaml'},\n",
+       " 'model_pusher_config': {'model_export_dir': 'saved_models'}}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config.config_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from housing.config.configuration import Configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con=Configuration()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data_Ingestion_Config(dataset_download_url='https://raw.githubusercontent.com/ageron/handson-ml/master/datasets/housing/housing.tgz', tgz_download_dir='c:\\\\Users\\\\Ankith\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-10_16-22-47\\\\tgz_data', raw_data_dir='c:\\\\Users\\\\Ankith\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-10_16-22-47\\\\raw_data', ingested_train_dir='c:\\\\Users\\\\Ankith\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-10_16-22-47\\\\ingested_data\\\\train', ingested_test_dir='c:\\\\Users\\\\Ankith\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-10_16-22-47\\\\ingested_data\\\\test')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "con.get_data_ingestion_config()\n",
+    "#this is the way the file is aved into the pipeline \n",
+    "\n",
+    "#just look at the order of the file saved in the foler and look at the folder structure in which they are saved"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\Ankith\\\\machine_learning_project\\\\notebook'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"c:\\\\Users\\\\Ankith\\\\machine_learning_project\")"
    ]
   },
   {
