--- a/notebook/example.ipynb
+++ b/notebook/example.ipynb
@@ -1008,31 +1008,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Ankith\\\\machine_learning_project\\\\notebook'"
+       "Data_Ingestion_Config(dataset_download_url='https://raw.githubusercontent.com/ageron/handson-ml/master/datasets/housing/housing.tgz', tgz_download_dir='c:\\\\Users\\\\Ankith\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-10_16-22-47\\\\tgz_data', raw_data_dir='c:\\\\Users\\\\Ankith\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-10_16-22-47\\\\raw_data', ingested_train_dir='c:\\\\Users\\\\Ankith\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-10_16-22-47\\\\ingested_data\\\\train', ingested_test_dir='c:\\\\Users\\\\Ankith\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-10_16-22-47\\\\ingested_data\\\\test')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "os.getcwd()"
+    "df123=con.get_data_ingestion_config()\n",
+    "df123"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\Ankith\\\\machine_learning_project\\\\housing\\\\artifact\\\\data_ingestion\\\\2022-07-10_16-22-47\\\\tgz_data'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "os.chdir(\"c:\\\\Users\\\\Ankith\\\\machine_learning_project\")"
+    "df123.tgz_download_dir"
    ]
   },
   {
