--- a/notebook/example3.ipynb
+++ b/notebook/example3.ipynb
@@ -131,10 +131,110 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class A:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "setattr(A,'b',56)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from threading import Thread\n",
+    "\n",
+    "\n",
+    "class DemoThread(Thread):\n",
+    "    def __init__(self,*args,**kwargs) -> str:\n",
+    "        super().__init__( name=\"demo_thread\", daemon=False)\n",
+    "\n",
+    "    def print_msg(self):\n",
+    "        time.sleep(2)\n",
+    "        print(\"I was called by Thread\")\n",
+    "\n",
+    "    def run(self) -> str:\n",
+    "        self.print_msg()\n",
+    "       # return super().run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating the objcet of demo thread class \n",
+      "strting the demo thread\n",
+      "Demo thread started \n",
+      "I was called by Thread\n",
+      "thread has completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Creating the objcet of demo thread class \")\n",
+    "d=DemoThread()\n",
+    "\n",
+    "print(\"strting the demo thread\")\n",
+    "d.start()\n",
+    "print(f\"Demo thread started \")\n",
+    "d.join()\n",
+    "print(f\"thread has completed\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#when u use start function in the thread class it overruns the run method"
+   ]
   }
  ],
  "metadata": {
